tests/baselines/reference/stringMappingAssignability.errors.txt
stringMappingAssignability.ts(1,7): error TS2322: Type 'number' is not assignable to type 'Uppercase<string>'.
stringMappingAssignability.ts(2,7): error TS2322: Type '{ foo: string; }' is not assignable to type 'Uppercase<string>'.


==== stringMappingAssignability.ts (2 errors) ====
    const x: Uppercase<string> = 42;
          ~
!!! error TS2322: Type 'number' is not assignable to type 'Uppercase<string>'.
    const y: Uppercase<string> = { foo: "bar" };
          ~
!!! error TS2322: Type '{ foo: string; }' is not assignable to type 'Uppercase<string>'.
    